@@ -305,6 +305,7 @@ public:
   void UpdateLastClipboardAction(const int iaction);
   void PlaceWindow(CWnd *pwnd, CRect *prect, UINT showCmd);
   void SetDCAText(CItemData * pci = NULL);
+  void OnItemSelected(NMHDR *pNotifyStruct, LRESULT *pLResult);
 
   //{{AFX_DATA(DboxMain)
   enum { IDD = IDD_PASSWORDSAFE_DIALOG };
@@ -528,9 +529,9 @@ protected:
   afx_msg void OnSendEmail();
   afx_msg void OnCopyUsername();
   afx_msg void OnContextMenu(CWnd* pWnd, CPoint point);
-  afx_msg void OnListItemSelected(NMHDR *pNotifyStruct, LRESULT *pLResult);
-  afx_msg void OnTreeItemSelected(NMHDR *pNotifyStruct, LRESULT *pLResult);
-  afx_msg void OnKeydownItemlist(NMHDR *pNotifyStruct, LRESULT *pResult);
+  afx_msg void OnListItemSelected(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnTreeItemSelected(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnKeydownItemlist(NMHDR *pNMHDR, LRESULT *pResult);
   afx_msg void OnItemDoubleClick(NMHDR* pNotifyStruct, LRESULT* result);
   afx_msg void OnHeaderRClick(NMHDR* pNotifyStruct, LRESULT* result);
   afx_msg void OnHeaderNotify(NMHDR* pNotifyStruct, LRESULT* result);
