@@ -70,19 +70,21 @@ public:
   bool WasLabelEdited() {return m_bEditLabelCompleted;};
   void SetDeleteKey(const unsigned char cVirtKey, const unsigned char cModifier);
   void SetRenameKey(const unsigned char cVirtKey, const unsigned char cModifier);
+  void DeleteAll()
+  {m_bDeletingAll = true; DeleteAllItems(); m_bDeletingAll = false;}
 
 protected:
   //{{AFX_MSG(CPWTreeCtrl)
-  afx_msg void OnBeginLabelEdit(LPNMHDR pnmhdr, LRESULT *pLResult);
-  afx_msg void OnEndLabelEdit(LPNMHDR pnmhdr, LRESULT *pLResult);
-  afx_msg void OnExpandCollapse(NMHDR *pNotifyStruct, LRESULT *result);
-  afx_msg void OnBeginDrag(LPNMHDR pnmhdr, LRESULT *pLResult);
+  afx_msg void OnBeginLabelEdit(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnEndLabelEdit(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnExpandCollapse(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnBeginDrag(NMHDR *pNMHDR, LRESULT *pLResult);
+  afx_msg void OnSelectionChanged(NMHDR *pNMHDR, LRESULT *pLResult);
   afx_msg void OnDestroy();
   afx_msg LRESULT OnMouseLeave(WPARAM, LPARAM);
   afx_msg void OnMouseMove(UINT nFlags, CPoint point);
   afx_msg void OnTimer(UINT nIDEvent);
   afx_msg BOOL OnEraseBkgnd(CDC* pDC);
-  //afx_msg void OnSelchanged(NMHDR* pNMHDR, LRESULT* pResult);
   //}}AFX_MSG
 
   BOOL PreTranslateMessage(MSG* pMsg);
@@ -146,4 +148,6 @@ private:
   WPARAM m_wpRenameMsg, m_wpRenameKey;
   bool m_bDeleteCtrl, m_bDeleteShift;
   bool m_bRenameCtrl, m_bRenameShift;
+
+  bool m_bDeletingAll;
 };
